add jwt user authentication -- still working out passport
